# ruisuishiki

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/data/material_pools/: ratio_5th_P1_area.json  ratio_5th_P1_food.json  ratio_5th_P1_length.json  ratio_5th_P1_people.json  ratio_5th_P1_shopping.json  ratio_5th_P1_time.json
backend/src/ruisuishiki/: cli.py  config.py  models.py
backend/src/ruisuishiki/generation/: __init__.py  material.py  pool.py  question_text.py
backend/src/ruisuishiki/patterns/: __init__.py  ratio_5th.py
backend/src/ruisuishiki/verification/: __init__.py  symbolic.py
backend/tests/: test_patterns.py  test_pool.py  test_verification.py
docs/: answer_input_extension_design.md  backbone_design_handoff.md  design_system.md  design_t5_operator_view_fable_2026-07-04.md  hint_rewrite_handoff.md  kokugo_series_handoff.md  quality_bar_fable_2026-07-17.md  trig_continuation_series_design_fable.md  trig_series_design_fable.md  段階0_俳句背骨_kokugo.md  段階0_環境準備.md  段階1_CLI問題生成.md
docs/theory/: 01-統合理論.md  02-批判的検討.md  03-MVP仕様書.md  04-国語版統合理論.md  06-国語版MVP仕様書.md  README.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/public/: LICENSE-THEORY
frontend/public/theory/: 05-国語版批判的検討.md  README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Math.tsx  OperatorFootprintView.tsx  PolyaQuestions.tsx
frontend/src/lib/: answerEval.test.ts  answerEval.ts  (+24 more)
scripts/: audit_hints.py  audit_hints_kokugo.py
(+7 files in other folders)
