[project]
name = "ruisuishiki-backend"
version = "0.1.0"
description = "戸田城外『推理式指導算術』のAI時代再構成——問題生成パイプライン"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.13",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
ruisuishiki = "ruisuishiki.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ruisuishiki"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
